# potential-doodle

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: dummy_sft.yaml  dummy_sft_lora.yaml  grade_school_math_llama_3_8b_lugh_llama.yaml  llama_3_2_1b.yaml
data/: create_personas.py  litellm_client.py  persona_2_persona.py  persona_deduplication.py
data/persona_generation/: prompt_template.py
notebooks/: analyze_wildchat1m.ipynb
scripts/: run_create_personas.sh  run_create_personas_wura.sh  run_persona_to_persona.sh  run_sft.sh  run_tgi.sh
src/: constant.py
src/data/: create_personas.py  create_personas_wikipedia.py  create_personas_wura.py  persona_2_persona.py  persona_deduplication.py  prompt_instruction_gen.py  verifiable_seed_prompts.csv
src/data/persona_generation/: ifeval_instructions.csv  prompt_template.py  seed_prompts.jsonl
src/llms/: azure_client.py  base.py  litellm_client.py  tgi_inference_client.py  utils.py
src/training/: estimate_training_req.py  model_utils.py  sft.py  training_args.py  utils.py
