[tool.poetry]
name = "dpo-language-adaptation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
litellm = "^1.53.9"
python-dotenv = "^1.0.1"
tenacity = "^9.0.0"
datasets = "^3.1.0"
jsonlines = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
